Modify PS1 and fix neobundle init setting

--- a/.gitconfig
+++ b/.gitconfig
@@ -11,6 +11,6 @@
     editor = vim
     filemode = false
     pager = LESS=-R less
-    autocrlf = true
+    autocrlf = input
 [push]
     default = upstream
