--- a/.gitconfig
+++ b/.gitconfig
@@ -15,7 +15,7 @@
     editor = vim
     filemode = false
     pager = LESS=-R less
-    autocrlf = true
+    autocrlf = input
     quotepath = false
 [push]
     default = upstream
