--- a/.gitconfig
+++ b/.gitconfig
@@ -19,3 +19,8 @@
   quotepath = false
 [push]
   default = upstream
+[diff "daff-csv"]
+  command = daff.rb diff --git
+[merge "daff-csv"]
+  name = daff tabular csv merge
+  driver = daff.rb merge --output %A %O %A %B
