.tigrcのrevertへのキーバインドが更新と被っていたので修正

--- a/.tigrc
+++ b/.tigrc
@@ -7,6 +7,6 @@ set split-view-height = 80%
 # 折り返し
 set wrap-lines = yes
 
-bind main R !git rebase -i %(commit)~
-bind diff R !git rebase -i %(commit)~
+bind main <Ctrl-r> !git rebase -i %(commit)~
+bind diff <Ctrl-r> !git rebase -i %(commit)~
 
