--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
   cb = checkout -b
   cop = !"git branch --all | tr -d '* ' | grep -v -e '->' | peco | sed -e 's+remotes/[^/]*/++g' | xargs git checkout"
   ref = for-each-ref --count=30 --sort=-committerdate refs/heads/ --format='%(authordate:iso8601) %(refname:short)' 
+  poi = reset --hard HEAD
 [core]
   editor = vim
   filemode = false
