fishのパスが変わってたので修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # ref: https://qiita.com/nl0_blu/items/9d207a70ccc8467f7bab
 # tmux起動時のシェルをfishにする
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /opt/homebrew/bin/fish
 
 # tmuxを256色表示できるようにする
 set-option -g default-terminal screen-256color
