add soft reset alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,9 @@
   rhh = reset --hard HEAD
   rhhh = reset --hard HEAD^
   rhhhh = reset --hard HEAD^^
+  rsh = reset HEAD
+  rshh = reset HEAD^
+  rshhh = reset HEAD^^
   rb = rebase
   ri = rebase -i
   b = branch
