--- a/.gitconfig
+++ b/.gitconfig
@@ -32,3 +32,7 @@
   quotepath = false
 [push]
   default = simple
+[merge]
+    tool = vscode
+[mergetool "vscode"]
+    cmd = code --wait --new-window --merge $LOCAL $REMOTE $BASE $MERGED
